Change overflow:scroll to overflow:auto to stop horizontal scrollbars appearing

--- a/resources/assets/less/sidebar.less
+++ b/resources/assets/less/sidebar.less
@@ -2,7 +2,7 @@
 
 .sidebar{
   .pt4;
-  overflow:scroll;
+  overflow:auto;
   position: fixed;
   height: 100%;
   float: left;
